
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for
#        the XXX IOC Application.
#
#  Auth: xx-Dec-2012, XXX         (xxx)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
central_node_ioc-R1-2-7:
 * Addition of support for FaultState PVs
 * st.cmd now loads the file fault_states.db (for FaultState PVs)
 * Version compatible with mps_config-2018-09-10-a, earlier
   mps_config versions don't have the fault_states.db file

central_node_ioc-R1-2-6:
 * Version built against central_node_engine-R1-2-4, minor fix
   to the beam charge verification table readback ('mps show fw'
   command) 

central_node_ioc-R1-2-5:
 * Version built against central_node_engine-R1-2-3, the only 
   difference to previous version is that the beam charge table
   is now populated with values from the configuration database
   (as opposed to hardcoded test numbers).

central_node_ioc-R1-2-4:
 * Add PVs to control and readback the status of the timing core.
 * Rename IOC directory to sioc-sys2-mp01.
 * Update Central Node FPGA IP address to 10.0.0.102.
 * Give executable permission to st.cmd.
 * Update PHYSICS_TOP path used in PROD.
 * Use dictionary file which is shipped with the IOC application.
 * Add PVs to save and load register configuration via CPSW YAML.
 * Rename the directory yaml to firmware.
 * Add the FW mcs file to the IOC app so it can be (re)load in PROD.
 * Add the YAML definition file corresponding to the current FW image
   to the IOC application and reference that file from st.cmd.

central_node_ioc-R1-2-3:
 * Fixes to the bypass string PVs, each analog threshold
   has a separate bypass string - which is indicated by
   the INP address calculated by the scripts that export
   information from the MPS database. When number of seconds
   reaches zero the string is set back to 'Not Bypassed'
 
central_node_ioc-R1-2-2: