@@ -82,7 +82,7 @@ EASYLOGGINGPP_INCLUDE = $(EASYLOGGING)
 # Central Node Engine
 #=========================================================
 CENTRAL_NODE_ENGINE_NAME=central_node_engine
-CENTRAL_NODE_ENGINE_VERSION=central_node_engine-R1-2-5
+CENTRAL_NODE_ENGINE_VERSION=central_node_engine-R1-3-0
 CENTRAL_NODE_ENGINE_TOP=$(PACKAGE_TOP)/$(CENTRAL_NODE_ENGINE_NAME)/$(CENTRAL_NODE_ENGINE_VERSION)
 #CENTRAL_NODE_ENGINE_TOP=/afs/slac/u/cd/lpiccoli/top/$(CENTRAL_NODE_ENGINE_NAME)
 CENTRAL_NODE_ENGINE_LIB=$(CENTRAL_NODE_ENGINE_TOP)/$(PKG_ARCH)/lib
